# algorithm-practices

./: Algorithm Practices.sln  CMakeLists.txt  LU_decomposition.cpp  README.md  main.cpp
Debug/: algorithm-practices.ilk
algorithm-practices/: LU_decomposition.cpp  algorithm-practices.cpp  algorithm-practices.vcxproj  algorithm-practices.vcxproj.filters  matrix2D.cpp  matrix2D.h
algorithm-practices/Debug/: algorithm-practices.pch  vc141.idb
algorithm-practices/Debug/algorith.B2926501.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  algorithm-practices.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
algorithm-practices/include/xinda_math/: tensor.hpp
include/: tensor.h
include/xinda_math/: matrix1.cpp  tensor.cpp  tensor.h  tensor1.cpp  tensor1.hpp
includes/: tensor.h
src/: tensor.cpp
